day03/mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql-deploy
    namespace: default
spec:
    #replica: 1
    selector:
        matchLabels:
            app: mysql
    template:
      metadata:
         labels:
             app: mysql
      spec:
         volumes:
          -  name: data-vol
             persistentVolumeClaim:
                 claimName: mysql-pvc
         containers:
         -   name: mysql-containers
             image: mysql:8
             ports:
             -   containerPort: 3306
             volumeMounts:
             -   name: data-vol
                 mountPath: /var/lib/mysql
