day03/api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: api
  labels:
    app: api
    name: api-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      name: api-po
      version: v1
  template:
    metadata:
      name: api-po
      labels:
        app: api
        name: api-po
        version: v1
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 64m
            memory: 64Mi
          limits:
            cpu: 64m
            memory: 64Mi
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
    version: v1
  ports:
  - port: 3000
    targetPort: 3000


---
apiVersion: autoscaling/v2
kind: 	HorizontalPodAutoscaler
metadata:
  name: hpa
  namespace: api
spec:
  minReplicas: 1
  maxReplicas: 6
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: api-deploy
  metrics:
    - type: Resource
      resource:
        name: memory # memory or cpu
        target:
          type: Utilization
          averageUtilization: 50
    - type: Resource
      resource:
        name: cpu # memory or cpu
        target:
          type: Utilization
          averageUtilization: 50
